docker/k8s/go/ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-gateway-ingress  # -svc
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "32m"
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  #  tls:
  #    - hosts:
  #        - dreamlu.me
  #      secretName: dreamlu-secret
  rules:
    #    - host: dreamlu.me
    - http:
        paths:
          - path: /
            backend:
              serviceName: service-name
              servicePort: 9000
